...
              ],
            ),
          ),
          if (contact.phone != null)
            _ContactItem(
              icon: Icons.phone,
              label: 'Phone',
              value: contact.phone!,
              color: Colors.green,
              onTap: () => _makeCall(context, contact.phone!),
              isDarkMode: isDarkMode,
            ),
          if (contact.SingleTap != null)
...
